[package]
name = "rome-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
rand_core = "0.9"
bevy_rand = "0.11"
bevy_prng = { version = "0.11", features = ["wyrand"] }
rand = "0.9.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
